--- a/GhostButton/GhostButton.html
+++ b/GhostButton/GhostButton.html
@@ -17,7 +17,7 @@
             <span class="line line-left"></span>
             <span class="line line-right"></span>
             <span class="line line-bottom"></span>
-            无敌1
+            Life U
         </a>
     </div>
     <div class="link link-mushroom" >
@@ -27,7 +27,7 @@
             <span class="line line-left"></span>
             <span class="line line-right"></span>
             <span class="line line-bottom"></span>
-            无敌2
+            Code Me
         </a>
     </div>
     <div class="link link-mushroom" >
@@ -37,7 +37,7 @@
             <span class="line line-left"></span>
             <span class="line line-right"></span>
             <span class="line line-bottom"></span>
-            无敌3
+            Game All
         </a>
     </div>
     <!--上浮的提示框-->
